# mockCMMS

./: .codecov.yml  .env.example  .flake8  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .pre-commit-config.yaml.DISABLED  .prettierrc  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  PROJECT_ISSUES.md  README.md  audit_results_full.txt  codecov.yml  collab.py  conftest.py  cookies.txt  crud_output.txt  eslint.config.js  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt  reset_admin_password.py  run.py  stylelint.config.js  validation_output.txt
.agents/skills/bug-tracking/: SKILL.md
.agents/skills/commit-workflow/: SKILL.md
.agents/skills/file-locking/: SKILL.md
.agents/skills/new-feature/: SKILL.md
.agents/skills/repo-navigation/: SKILL.md
.agents/skills/shell-compatibility/: SKILL.md
.agents/skills/skills-maintenance/: SKILL.md
.agents/skills/testing-workflow/: SKILL.md
.collab/: README.md  logging_config.py  schema.sql
.collab/core/: __init__.py  lock_client.py  watcher.py
.collab/dashboard/: index.html  server.py
.collab/hooks/: commit-msg  install_hooks.sh  post-commit  pre-commit  pre-push
.collab/pycharm/: Collab_Lock_Watcher.xml  live_locks_watcher.py  plugin_notes.md
.collab/scripts/: setup.ps1  setup.sh
.collab/tests/: __init__.py  conftest.py  test_lock_client.py  test_lock_client_extra.py
.collab/tests/unit/: __init__.py  test_live_locks_watcher.py  test_live_locks_watcher_extra.py  test_live_locks_watcher_more.py  test_lock_client.py  test_logging_config.py  (+4 more)
.collab/vscode/: README.md  extension.js  package.json
.github/: AGENT.md  CODEOWNERS  CONTRIBUTING.md  GIT_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  custom.md  feature_request.md  feature_request.yml  general_inquiry.yml
.github/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  dependabot-autoformat.yml  frontend-tests.yml  lock-service-smoke-test.yml  release.yml  semantic-pr.yml  validate-on-pr.yml
apps/planning/: CHANGELOG.md  README.md  setup.py
apps/reporting/: README.md  setup.py
apps/reports/: README.md  setup.py
apps/workforceManager/: CHANGELOG.md  README.md  setup.py
docs/: AI_AGENT_GUIDE.md  AUDIT_REPORT_FRONTEND_TESTS.md  AUDIT_REPORT_SRC.md  BUG_FIXES_NOV19_EVENING.md  DEVELOPMENT_TOOLS.md  HOW_TO_UPDATE_ROADMAPS.md  IMPLEMENTATION_PRIORITY_GUIDE.md  PHASE3_GANTT_IMPLEMENTATION_REPORT.md  PLANNING_MODULE_ACTION_PLAN.md  PLANNING_MODULE_STATUS.md  TASK_1.3_TESTING_GUIDE.md  WEEKEND_PLANNING_BUG_INVESTIGATION.md  advanced-table-fixes-plan.md  apps_comprehensive_testing_quality_plan.md  bootstrap5_upgrade_analysis.md  bug_tracking.md  collab_runtime_migration_notes.md  collaborative-development.md  comprehensive_testing_plan.md  core_code_quality_plan.md  final_audit_log.md  frontend_testing_plan.md  maintenance.md  mockCMMS_roadmap.md  phase0_peer_review.md  phase2_hybrid_roadmap.md  planning_data_flow.md  table_features_test_plan.md  visual_testing_strategy.md
docs/COLLABORATIVE_DEVELOPMENT/: COLLABORATIVE_DEVELOPMENT_ANALYSIS.md  COLLABORATIVE_DEVELOPMENT_INDEX.md  COLLABORATIVE_DEVELOPMENT_QUICK_START.md  COLLABORATIVE_DEVELOPMENT_VISUAL_GUIDE.md  TIER1_GIT_PROTECTION.md  TIER2_FILE_LOCKING_SYSTEM.md
docs/Monitoring app/: monitoring_concept_and_modular_architecture.md  monitoring_roadmap.md  monitoring_visual_reference.md
docs/Troubleshooting app/: troubleshooting_concept_and_modular_architecture.md  troubleshooting_roadmap.md
docs/archive/: PHASE3_TEAM_FORMATION_REPORT.md  SECURITY_AUDIT_PLANNING_MODULE.md
docs/deprecated/: AI_AGENT_GUIDE.md  AUDIT_REPORT_FRONTEND_TESTS.md  AUDIT_REPORT_SRC.md  IMPLEMENTATION_PRIORITY_GUIDE.md  comprehensive_testing_plan.md  core_code_quality_plan.md  frontend_testing_plan.md  table_features_test_plan.md
scripts/: auto_release_hook.py  build_portable.py  check_commit_msg.py  cleanup.py  cleanup_locks.py  doc_dates.py  format_code.py  generate_tests.py  release_manager.py  safe-amend.ps1  setup-dev.ps1  setup.ps1  setup_collab_dev.sh  validate_code.py
scripts/hooks/: commit-msg  post-commit  post_checkout_lock.py  post_commit_lock.py  post_merge_lock.py  pre-commit  pre-push  pre_commit_lock.py  pre_push_lock.py
src/: __init__.py  app.py
src/config/: dropdown_options.json
src/routes/: api.py  main.py  simulation.py
src/services/: __init__.py  collaborative_explorer.html  db_seeding.py  db_utils.py  lock_client.py  lock_dashboard.html  lock_manager.py  lock_manager_app.py  lock_schema.sql  logging_config.py  shift_utils.py  simulation_service.py
src/templates/: asset_detail.html  assets.html  base.html  index.html  login.html  macros.html  maintenance_grid.html  maintenance_order_detail.html  maintenance_orders.html  planning.html  planning_embed.html  shift_calendar.html  spare_part_detail.html  spare_parts.html  technician_detail.html  ticket.html  user_detail.html  users.html  workforce_manager_embed.html
test_data/: dummy_data.json
tests/: README.md  conftest.py  test_advanced_validation.py  test_api.py  test_api_routes.py  test_app.py  test_auth.py  test_errors.py  test_main_routes.py  test_validation.py
tests/backend/: conftest.py  test_lock_client.py  test_lock_client_extra.py  test_lock_manager.py  test_lock_manager_api.py
tests/e2e/: 00_visual.spec.js  advanced-table.spec.js  crud.spec.js  smoke.spec.js  visual.spec.js
tests/functional/: test_api_routes.py  test_main_routes.py  test_simulation_ui.py
tests/integration/: test_integration.py
tests/js/: flash-messages.test.js  toast-notification.test.js
tests/performance/: test_performance.py
tests/reliability/: test_errors.py
tests/security/: test_auth.py  test_validation.py
tests/unit/: test_app.py  test_db_utils.py  test_logging.py  test_planning_config.py  test_planning_view.py  test_run.py  test_shift_utils.py  test_simulation_service.py
(+470 files in other folders)
