# pyproject.toml
# Created: December 11, 2025
# Updated: December 20, 2025 - Added isort and docformatter configurations
# Purpose: Modern Python project configuration for mockCMMS

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockCMMS"
version = "0.1.0"
description = "Mock CMMS (Computerized Maintenance Management System)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "mockCMMS Team"}
]

# =============================================================================
# PYTEST CONFIGURATION (consolidated from pytest.ini)
# =============================================================================
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/backend", "apps"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output and Behavior
addopts = """
    -v
    --tb=short
    --strict-markers
    --cov=src
    --cov=apps
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=85
    -W ignore::ResourceWarning
    -W ignore::pytest.PytestUnraisableExceptionWarning
"""

# Warning filters (silence SQLite GC edge cases)
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]

# Test Markers - Organized by test category directories
markers = [
    "unit: Unit tests - fast, isolated tests of individual components",
    "functional: Functional tests - API and route endpoint tests",
    "integration: Integration tests - end-to-end workflow tests",
    "security: Security tests - auth, validation, and security concerns",
    "performance: Performance tests - scalability and optimization",
    "reliability: Reliability tests - error handling and robustness",
    "slow: Marks tests as slow (deselect with '-m \"not slow\"')",
    "api: Marks tests for API endpoints",
    "routes: Marks tests for web routes",
    "database: Marks tests requiring database access"
]

# pytest-env configuration (list of strings)
env = [
    "TESTING=1",
    "DATABASE_FILENAME=:memory:",
    "PLANNING_ENABLED=true",
    "REPORTING_ENABLED=true",
]



# Logging
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# =============================================================================
# CODE FORMATTING TOOLS
# RECOMMENDED EXECUTION ORDER: isort → black → docformatter
# 1. isort: Sort and organize imports (PEP 8)
# 2. black: Format code structure and style
# 3. docformatter: Format docstrings (PEP 257)
# =============================================================================

# =============================================================================
# BLACK FORMATTER CONFIGURATION
# =============================================================================
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# =============================================================================
# ISORT CONFIGURATION (Import Sorting - PEP 8 Compliant)
# =============================================================================
[tool.isort]
profile = "black"  # Compatible with Black formatter
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__", ".venv", "venv", "build", "dist", "migrations", "node_modules"]
known_first_party = ["src"]
known_third_party = ["flask", "sqlalchemy", "werkzeug", "jinja2", "wtforms"]

# =============================================================================
# DOCFORMATTER CONFIGURATION (Docstring Formatting - PEP 257 Compliant)
# =============================================================================
[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88
make-summary-multi-line = false
close-quotes-on-newline = false
pre-summary-newline = false
force-wrap = false
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

# =============================================================================
# FLAKE8 CONFIGURATION (consolidated from .flake8)
# Note: flake8 doesn't natively support pyproject.toml, but many tools
# (like pflake8) do. For native flake8, use .flake8 or setup.cfg.
# This section documents the settings for reference.
# =============================================================================
# [tool.flake8]  # Not natively supported - keeping .flake8 for now
# max-line-length = 88
# extend-ignore = ["E203", "W503"]
# exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist", "*.egg-info", ".pytest_cache", "htmlcov", "instance", "apps"]

# =============================================================================
# RUFF CONFIGURATION (modern alternative to flake8)
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
    "instance"
]

[tool.ruff.lint]
# Rules that align with Black formatter
# Note: W503 removed - not valid in newer ruff versions (use flake8 for this rule)
extend-ignore = ["E203"]
select = ["E", "F", "W"]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src", "apps"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "apps/planning/src/services/extract_data.py",
    "apps/planning/src/services/data_processing.py",
    "apps/planning/src/services/dashboard.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
# Check all Python code from the root to ensure unambiguous resolution
files = ["."]
exclude = [
    ".venv/",
    "node_modules/",
    "htmlcov/",
    "playwright-report/",
]

# Enable checks for modular apps
[[tool.mypy.overrides]]
module = "apps.*"
ignore_errors = false
follow_imports = "silent"

# =============================================================================
# DJLINT CONFIGURATION (Jinja2 Template Linting)
# =============================================================================
[tool.djlint]
# Profile for Jinja2 (Flask uses Jinja2)
profile = "jinja"

# Indentation (matches Prettier standard)
indent = 4

# Max line length (soft limit)
max_line_length = 88

# Usage of blank lines
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "load,extends,include"

# Ignore specific error codes if necessary
# H006: img tag should have alt attribute (often dynamic in mock)
# H030: meta tag (viewport) missing (handled in base.html)
# H031: meta tag (charset) missing (handled in base.html)
ignore = "H006,H030,H031"

# Exclude patterns
exclude = ".venv,node_modules,apps"

# =============================================================================
# PYTEST-TESTMON CONFIGURATION
# Tracks which tests cover which source lines so --quick only reruns tests
# whose covered code actually changed (Tier 1 of smart test targeting).
# The .testmondata file is local-only — it is listed in .gitignore.
# Seed it once with: pytest --testmon  (or any full suite run)
# =============================================================================
[tool.testmon]
# Store the coverage DB in the project root (default; explicit for clarity)
testmon_datafile = ".testmondata"
